--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,11 @@ body {
 .board{
   width: 100%;
   height: 100vh;
+  background: radial-gradient(
+    circle closest-corner at center 125px,
+    #222,
+    black 40%
+  ) no-repeat;
   margin: 0;
   padding: 0;
   display: flex;
@@ -65,19 +70,28 @@ body {
   justify-content: center;
   align-items: center;
 }
+.board-heading{
+  color: #999;
+  font-size: x-large;
+  text-transform: uppercase;
+  font-family:Arial, Helvetica, sans-serif;
+  letter-spacing: 1px;
+  word-spacing: 3px;
+}
 .square {
-  background: #fff;
+  background: transparent;
+  color: #ffffff;
   border: 1px solid #999;
   float: left;
-  font-size: 24px;
+  font-size: 64px;
   font-weight: bold;
   line-height: 34px;
-  height: 34px;
+  height: 74px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 74px;
 }
 
 .board-row:after {
@@ -87,6 +101,7 @@ body {
 }
 
 .status {
+  color: #999;
   margin-bottom: 10px;
 }
 .game {
