--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ body {
   color: #999;
   font-size: x-large;
   text-transform: uppercase;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   letter-spacing: 1px;
   word-spacing: 3px;
 }
@@ -101,7 +101,7 @@ body {
 }
 
 .status {
-  color: #999;
+  color: #fff;
   margin-bottom: 10px;
 }
 .game {
